--- a/style/style.scss
+++ b/style/style.scss
@@ -45,6 +45,7 @@
 @import "bem-box/iconsMenu";
 @import "bem-box/progressBar";
 @import "bem-box/services";
+@import "bem-box/impressed";
 
 .container {
     max-width: 1360px;
