--- a/style/bem-box/_headerSlider.scss
+++ b/style/bem-box/_headerSlider.scss
@@ -22,6 +22,10 @@
         letter-spacing: 1px;
         margin-bottom: 200px;
         text-align: center;
+
+        @include media-breakpoint-down(sm) {
+            margin-bottom: 50px;
+        }
     }
 
     &__hover {
