--- a/style/style.css
+++ b/style/style.css
@@ -58,6 +58,12 @@
   text-align: center;
 }
 
+@media (max-width: 767.98px) {
+  .b-headerSlider__desc {
+    margin-bottom: 50px;
+  }
+}
+
 .b-headerSlider__hover {
   display: block;
   width: 35px;
@@ -217,7 +223,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 5px solid #1a484b;
+  border: 5px solid #0e2425;
   position: absolute;
   top: 0;
   left: 0;
@@ -658,6 +664,221 @@ Due to the split circle of progress-left and progress right, we must use the ani
   }
 }
 
+.b-portfolio {
+  background-color: #f3f3f3;
+  padding: 70px 120px;
+}
+
+.b-portfolio__nav {
+  text-align: center;
+  margin: 30px 0;
+}
+
+.b-portfolio__navItems {
+  font-size: 16px;
+  color: #464646;
+  line-height: 2;
+}
+
+.b-portfolio__navItems:not(:last-child) {
+  margin-right: 15px;
+}
+
+.b-portfolio__navItems:hover {
+  border-bottom: 1px solid #19bd9a;
+  text-decoration: none;
+  color: #464646;
+}
+
+.b-portfolio__iconsBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+.b-portfolio__iconLike {
+  width: 30px;
+  height: 30px;
+  background-color: #000;
+  background-image: url(../../images/iconLike.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.b-portfolio__iconLike:hover {
+  background-color: #19bd9a;
+}
+
+.b-portfolio__iconLink {
+  width: 30px;
+  height: 30px;
+  background-color: #000;
+  background-image: url(../../images/icon-link.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.b-portfolio__iconLink:hover {
+  background-color: #19bd9a;
+}
+
+.b-portfolio__imgBox {
+  margin: 0;
+  min-height: 950px;
+}
+
+.b-portfolio__col1, .b-portfolio__col2, .b-portfolio__col3, .b-portfolio__col4 {
+  padding-left: 0;
+}
+
+.b-portfolio__col1 {
+  display: -ms-grid;
+  display: grid;
+  grid-row-gap: 15px;
+  -ms-grid-rows: 40% 40% 20%;
+      grid-template-rows: 40% 40% 20%;
+}
+
+.b-portfolio__col2 {
+  display: -ms-grid;
+  display: grid;
+  grid-row-gap: 15px;
+  -ms-grid-rows: 20% 40% 40%;
+      grid-template-rows: 20% 40% 40%;
+}
+
+.b-portfolio__col3 {
+  display: -ms-grid;
+  display: grid;
+  grid-row-gap: 15px;
+  -ms-grid-rows: 30% 40% 30%;
+      grid-template-rows: 30% 40% 30%;
+}
+
+.b-portfolio__col4 {
+  display: -ms-grid;
+  display: grid;
+  grid-row-gap: 15px;
+  -ms-grid-rows: 40% 25% 35%;
+      grid-template-rows: 40% 25% 35%;
+}
+
+.b-portfolio__img1-1 {
+  background-image: url(../../images/portfolio1-1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img1-2 {
+  background-image: url(../../images/portfolio1-2.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img1-3 {
+  background-image: url(../../images/portfolio1-3.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img1-4 {
+  background-image: url(../../images/portfolio1-4.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img2-1 {
+  background-image: url(../../images/portfolio2-1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img2-2 {
+  background-image: url(../../images/portfolio2-2.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img2-3 {
+  background-image: url(../../images/portfolio2-3.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img2-4 {
+  background-image: url(../../images/portfolio2-4.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img3-1 {
+  background-image: url(../../images/portfolio3-1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img3-2 {
+  background-image: url(../../images/portfolio3-2.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img3-3 {
+  background-image: url(../../images/portfolio3-3.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__img3-4 {
+  background-image: url(../../images/portfolio3-4.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.b-portfolio__textUp {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 30px;
+  background-color: #000;
+  opacity: 0;
+}
+
+.b-portfolio__textUp:hover {
+  opacity: 0.8;
+}
+
+.b-portfolio__imgLink {
+  font-size: 20px;
+  font-family: "Source Sans Pro", sans-serif;
+  color: #19bd9a;
+  line-height: 2;
+}
+
+.b-portfolio__imgLink:hover {
+  border-bottom: 1px solid #19bd9a;
+  color: #19bd9a;
+  text-decoration: none;
+}
+
+.b-portfolio__imgDesc {
+  font-size: 12px;
+  color: #b2b3b3;
+  line-height: 1.667;
+}
+
 .container {
   max-width: 1360px;
   padding: 0;
@@ -677,6 +898,7 @@ header {
 @media (max-width: 767.98px) {
   header {
     padding: 30px 30px;
+    min-height: 400px;
   }
 }
 
