--- a/style/bem-box/_portfolio.scss
+++ b/style/bem-box/_portfolio.scss
@@ -2,9 +2,13 @@
     background-color: #f3f3f3;
     padding: 70px 120px;
 
+    @include media-breakpoint-down(md) {
+        padding: 50px;
+    }
+
     &__nav {
         text-align: center;
-        margin: 30px 0;
+        margin: 50px 0;
     }
 
     &__navItems {
@@ -23,36 +27,9 @@
         }
     }
 
-
-    &__iconsBox {
-        display: flex;
-        justify-content: left;
-    }
-
-    &__iconLike {
-        width: 30px;
-        height: 30px;
-        background-color: #000;
-        background-image: url(../../images/iconLike.png);
-        background-repeat: no-repeat;
-        background-position: center;
-
-        &:hover {
-            background-color: #19bd9a;
-        }
-    }
-
-    &__iconLink {
-        width: 30px;
-        height: 30px;
-        background-color: #000;
-        background-image: url(../../images/icon-link.png);
-        background-repeat: no-repeat;
-        background-position: center;
-
-        &:hover {
-            background-color: #19bd9a;
-        }
+    &__dropdownMenu {
+        text-align: right;
+        margin: 50px 5px;
     }
 
     &__imgBox {
@@ -64,32 +41,33 @@
     &__col2,
     &__col3,
     &__col4 {
-        padding-left: 0;
+        padding: 0 5px;
+        margin-bottom: 10px;
 
     }
 
     &__col1 {
         display: grid;
-        grid-row-gap: 15px;
-        grid-template-rows: 40% 40% 20%;
+        grid-row-gap: 10px;
+        grid-template-rows: 2fr 2fr 1fr;
     }
 
     &__col2 {
         display: grid;
-        grid-row-gap: 15px;
-        grid-template-rows: 20% 40% 40%;
+        grid-row-gap: 10px;
+        grid-template-rows: 1fr 2fr 2fr;
     }
 
     &__col3 {
         display: grid;
-        grid-row-gap: 15px;
-        grid-template-rows: 30% 40% 30%;
+        grid-row-gap: 10px;
+        grid-template-rows: 1fr 1.25fr 1fr;
     }
 
     &__col4 {
         display: grid;
-        grid-row-gap: 15px;
-        grid-template-rows: 40% 25% 35%;
+        grid-row-gap: 10px;
+        grid-template-rows: 1.6fr 1fr 1.4fr;
     }
 
     &__img1-1 {
@@ -170,14 +148,45 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 0 30px;
-        background-color: #000;
+        padding: 10px 30px;
+        background-color: rgba($color: #000000, $alpha: 0.8);
         opacity: 0;
 
         &:hover {
-            opacity: 0.8;
+            opacity: 1;
         }
 
+    }
+
+    &__iconsBox {
+        display: flex;
+        justify-content: left;
+    }
+
+    &__iconLike {
+        width: 30px;
+        height: 30px;
+        background-color: #000;
+        background-image: url(../../images/iconLike.png);
+        background-repeat: no-repeat;
+        background-position: center;
+
+        &:hover {
+            background-color: #19bd9a;
+        }
+    }
+
+    &__iconLink {
+        width: 30px;
+        height: 30px;
+        background-color: #000;
+        background-image: url(../../images/icon-link.png);
+        background-repeat: no-repeat;
+        background-position: center;
+
+        &:hover {
+            background-color: #19bd9a;
+        }
     }
 
     &__imgLink {
@@ -193,9 +202,40 @@
         }
     }
 
+    &__imgLink_mobile {
+        font-size: 20px;
+        color: #f3f3f3;
+
+        &:hover {
+            color: #19bd9a;
+            text-decoration: none;
+        }
+    }
+
     &__imgDesc {
         font-size: 12px;
         color: rgb(178, 179, 179);
         line-height: 1.667;
     }
+
+    &__startProject {
+        min-height: 200px;
+        background-image: url(../../images/portfolio-start-bg.png);
+        background-size: cover;
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 10px;
+    }
+
+    &__startDesc {
+        font-size: 20px;
+        color: rgb(255, 255, 255);
+        line-height: 1.25;
+    }
+
+
 }
