--- a/style/style.css
+++ b/style/style.css
@@ -669,9 +669,15 @@ Due to the split circle of progress-left and progress right, we must use the ani
   padding: 70px 120px;
 }
 
+@media (max-width: 991.98px) {
+  .b-portfolio {
+    padding: 50px;
+  }
+}
+
 .b-portfolio__nav {
   text-align: center;
-  margin: 30px 0;
+  margin: 50px 0;
 }
 
 .b-portfolio__navItems {
@@ -690,39 +696,9 @@ Due to the split circle of progress-left and progress right, we must use the ani
   color: #464646;
 }
 
-.b-portfolio__iconsBox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-}
-
-.b-portfolio__iconLike {
-  width: 30px;
-  height: 30px;
-  background-color: #000;
-  background-image: url(../../images/iconLike.png);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.b-portfolio__iconLike:hover {
-  background-color: #19bd9a;
-}
-
-.b-portfolio__iconLink {
-  width: 30px;
-  height: 30px;
-  background-color: #000;
-  background-image: url(../../images/icon-link.png);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.b-portfolio__iconLink:hover {
-  background-color: #19bd9a;
+.b-portfolio__dropdownMenu {
+  text-align: right;
+  margin: 50px 5px;
 }
 
 .b-portfolio__imgBox {
@@ -731,39 +707,40 @@ Due to the split circle of progress-left and progress right, we must use the ani
 }
 
 .b-portfolio__col1, .b-portfolio__col2, .b-portfolio__col3, .b-portfolio__col4 {
-  padding-left: 0;
+  padding: 0 5px;
+  margin-bottom: 10px;
 }
 
 .b-portfolio__col1 {
   display: -ms-grid;
   display: grid;
-  grid-row-gap: 15px;
-  -ms-grid-rows: 40% 40% 20%;
-      grid-template-rows: 40% 40% 20%;
+  grid-row-gap: 10px;
+  -ms-grid-rows: 2fr 2fr 1fr;
+      grid-template-rows: 2fr 2fr 1fr;
 }
 
 .b-portfolio__col2 {
   display: -ms-grid;
   display: grid;
-  grid-row-gap: 15px;
-  -ms-grid-rows: 20% 40% 40%;
-      grid-template-rows: 20% 40% 40%;
+  grid-row-gap: 10px;
+  -ms-grid-rows: 1fr 2fr 2fr;
+      grid-template-rows: 1fr 2fr 2fr;
 }
 
 .b-portfolio__col3 {
   display: -ms-grid;
   display: grid;
-  grid-row-gap: 15px;
-  -ms-grid-rows: 30% 40% 30%;
-      grid-template-rows: 30% 40% 30%;
+  grid-row-gap: 10px;
+  -ms-grid-rows: 1fr 1.25fr 1fr;
+      grid-template-rows: 1fr 1.25fr 1fr;
 }
 
 .b-portfolio__col4 {
   display: -ms-grid;
   display: grid;
-  grid-row-gap: 15px;
-  -ms-grid-rows: 40% 25% 35%;
-      grid-template-rows: 40% 25% 35%;
+  grid-row-gap: 10px;
+  -ms-grid-rows: 1.6fr 1fr 1.4fr;
+      grid-template-rows: 1.6fr 1fr 1.4fr;
 }
 
 .b-portfolio__img1-1 {
@@ -851,13 +828,48 @@ Due to the split circle of progress-left and progress right, we must use the ani
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 0 30px;
-  background-color: #000;
+  padding: 10px 30px;
+  background-color: rgba(0, 0, 0, 0.8);
   opacity: 0;
 }
 
 .b-portfolio__textUp:hover {
-  opacity: 0.8;
+  opacity: 1;
+}
+
+.b-portfolio__iconsBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+.b-portfolio__iconLike {
+  width: 30px;
+  height: 30px;
+  background-color: #000;
+  background-image: url(../../images/iconLike.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.b-portfolio__iconLike:hover {
+  background-color: #19bd9a;
+}
+
+.b-portfolio__iconLink {
+  width: 30px;
+  height: 30px;
+  background-color: #000;
+  background-image: url(../../images/icon-link.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.b-portfolio__iconLink:hover {
+  background-color: #19bd9a;
 }
 
 .b-portfolio__imgLink {
@@ -873,10 +885,48 @@ Due to the split circle of progress-left and progress right, we must use the ani
   text-decoration: none;
 }
 
+.b-portfolio__imgLink_mobile {
+  font-size: 20px;
+  color: #f3f3f3;
+}
+
+.b-portfolio__imgLink_mobile:hover {
+  color: #19bd9a;
+  text-decoration: none;
+}
+
 .b-portfolio__imgDesc {
   font-size: 12px;
   color: #b2b3b3;
   line-height: 1.667;
+}
+
+.b-portfolio__startProject {
+  min-height: 200px;
+  background-image: url(../../images/portfolio-start-bg.png);
+  background-size: cover;
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: 10px;
+}
+
+.b-portfolio__startDesc {
+  font-size: 20px;
+  color: white;
+  line-height: 1.25;
 }
 
 .container {
@@ -912,7 +962,7 @@ header {
   color: #333b46;
   line-height: 0.75;
   text-align: center;
-  padding: 10px;
+  padding: 12px;
 }
 
 .buttonLink:hover {
@@ -923,6 +973,11 @@ header {
 
 .buttonLinkAbout {
   margin-top: 30px;
+}
+
+.buttonLinkPortfolio {
+  border: #fff solid 1px;
+  color: #fff;
 }
 
 .sectionTitleCenter,
