--- a/style/style.css
+++ b/style/style.css
@@ -207,7 +207,7 @@
   margin-bottom: 15px;
 }
 
-.progress {
+.progress-services {
   width: 120px;
   height: 120px;
   line-height: 120px;
@@ -218,18 +218,18 @@
   position: relative;
 }
 
-.progress:after {
+.progress-services:after {
   content: "";
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 5px solid #0e2425;
+  border: 5px solid #48494a;
   position: absolute;
   top: 0;
   left: 0;
 }
 
-.progress > span {
+.progress-services > span {
   width: 50%;
   height: 100%;
   overflow: hidden;
@@ -238,11 +238,11 @@
   z-index: 1;
 }
 
-.progress .progress-left {
+.progress-services .progress-left-services {
   left: 0;
 }
 
-.progress .progress-bar {
+.progress-services .progress-bar-services {
   width: 100%;
   height: 100%;
   background: none;
@@ -253,7 +253,7 @@
   border-color: #21be9d;
 }
 
-.progress .progress-left .progress-bar {
+.progress-services .progress-left-services .progress-bar-services {
   left: 100%;
   border-top-right-radius: 60px;
   border-bottom-right-radius: 60px;
@@ -262,11 +262,11 @@
   transform-origin: center left;
 }
 
-.progress .progress-right {
+.progress-services .progress-right-services {
   right: 0;
 }
 
-.progress .progress-right .progress-bar {
+.progress-services .progress-right-services .progress-bar-services {
   left: -100%;
   border-top-left-radius: 60px;
   border-bottom-left-radius: 60px;
@@ -275,7 +275,7 @@
   transform-origin: center right;
 }
 
-.progress .progress-value {
+.progress-services .progress-value-services {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -291,7 +291,7 @@
   font-weight: 300;
 }
 
-.progress .progress-value .percent {
+.progress-services .progress-value-services .percent {
   font-size: 25px;
   color: #81868e;
   line-height: 1;
@@ -901,32 +901,108 @@ Due to the split circle of progress-left and progress right, we must use the ani
   line-height: 1.667;
 }
 
-.b-portfolio__startProject {
-  min-height: 200px;
-  background-image: url(../../images/portfolio-start-bg.png);
-  background-size: cover;
-  margin-top: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.b-team {
+  min-height: 770px;
+  background-color: #fff;
+}
+
+.b-team__title {
+  padding: 50px 0;
+}
+
+.b-team__carousel {
+  min-height: 430px;
+  background-color: rgba(161, 161, 161, 0.5);
+}
+
+.b-team__fotoNameBox {
+  text-align: right;
+  border-right: 3px solid #19bd9a;
+  padding-right: 15px;
+}
+
+.b-team__foto {
+  max-width: 285px;
+  height: 365px;
+}
+
+@media (max-width: 767.98px) {
+  .b-team__foto {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .b-team__fotoBox {
+    margin-bottom: 20px;
+  }
+}
+
+.b-team__carouselItems {
+  padding: 60px 160px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
-  padding: 10px;
+  margin: 0;
 }
 
-.b-portfolio__startDesc {
+@media (max-width: 991.98px) {
+  .b-team__carouselItems {
+    padding: 60px 30px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+.b-team__progressTextBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.b-team__fotoName {
   font-size: 20px;
-  color: white;
-  line-height: 1.25;
+  color: #464646;
+}
+
+.b-team__fotoProf {
+  font-size: 14px;
+  font-family: "Source Sans Pro", sans-serif;
+  color: #48494a;
+  text-transform: uppercase;
+}
+
+.b-team__fotoDesc {
+  font-size: 14px;
+  color: #81868e;
+  line-height: 1.786;
+  text-align: justify;
+}
+
+.b-team__progressFirst, .b-team__progressSecond, .b-team__progressThird {
+  height: 5px;
+  background-color: #f3f3f3;
+}
+
+.b-team__progressBar {
+  background-color: #19bd9a;
+}
+
+.b-team__progressText {
+  font-size: 16px;
+  font-family: "Source Sans Pro", sans-serif;
+  color: #48494a;
+  text-transform: uppercase;
+  line-height: 1.563;
 }
 
 .container {
@@ -975,7 +1051,7 @@ header {
   margin-top: 30px;
 }
 
-.buttonLinkPortfolio {
+.buttonFooterSection {
   border: #fff solid 1px;
   color: #fff;
 }
@@ -1045,5 +1121,38 @@ header {
 
 .iconCable:hover {
   background-color: #19bd9a;
+}
+
+.footerSection {
+  min-height: 200px;
+  background-image: url(../images/portfolio-start-bg.png);
+  background-size: cover;
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: 10px;
+}
+
+.footerSectionDesc {
+  font-size: 20px;
+  color: white;
+  line-height: 1.25;
+}
+
+.footerSectionTeam {
+  margin-top: 0;
+  background-image: url(../images/team-footer-bg.png);
 }
 /*# sourceMappingURL=style.css.map */
