--- a/style/style.css
+++ b/style/style.css
@@ -912,7 +912,6 @@ Due to the split circle of progress-left and progress right, we must use the ani
 
 .b-team__carousel {
   min-height: 430px;
-  background-color: rgba(161, 161, 161, 0.5);
 }
 
 .b-team__fotoNameBox {
@@ -1003,6 +1002,245 @@ Due to the split circle of progress-left and progress right, we must use the ani
   color: #48494a;
   text-transform: uppercase;
   line-height: 1.563;
+}
+
+.b-reviews {
+  min-height: 650px;
+  background-color: #f3f3f3;
+  padding: 80px 80px 50px;
+}
+
+@media (max-width: 767.98px) {
+  .b-reviews {
+    padding: 50px 20px;
+  }
+}
+
+.b-reviews__carousel {
+  background-color: #fff;
+  margin-top: 30px;
+}
+
+.b-reviews__carouselItem {
+  margin: 0;
+  min-height: 320px;
+  padding: 50px 65px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+@media (max-width: 767.98px) {
+  .b-reviews__carouselItem {
+    padding: 50px 20px;
+  }
+}
+
+.b-reviews__imgBox {
+  padding: 0;
+}
+
+@media (max-width: 991.98px) {
+  .b-reviews__imgBox {
+    margin-bottom: 15px;
+    padding-left: 15px;
+  }
+}
+
+.b-reviews__img {
+  width: auto;
+  height: 130px;
+}
+
+@media (max-width: 767.98px) {
+  .b-reviews__img {
+    width: auto;
+    height: 150px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
+.b-reviews__reviewText {
+  font-size: 16px;
+  color: #81868e;
+  line-height: 1.75;
+  text-align: justify;
+}
+
+.b-reviews__reviewName {
+  font-size: 16px;
+  color: #19bd9a;
+  font-weight: bold;
+  line-height: 1.25;
+  margin-bottom: 5px;
+}
+
+.b-reviews__reviewProf {
+  font-size: 14px;
+  color: #464646;
+  line-height: 1.429;
+}
+
+.b-price {
+  background-color: #e2dfdf;
+  min-height: 600px;
+  padding: 50px 0;
+}
+
+.b-price__blockTitle {
+  font-size: 20px;
+  color: white;
+  font-weight: bold;
+  display: inline-block;
+  background-color: #19bd9a;
+  width: 100%;
+  min-height: 60px;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 50px;
+}
+
+.b-price__blockPrice {
+  font-size: 50px;
+  font-family: "Source Sans Pro", sans-serif;
+  color: #1fbba6;
+  font-weight: bold;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.b-price__blockDesc {
+  font-size: 20px;
+  color: #81868e;
+  text-align: center;
+}
+
+.b-price__blockWrap {
+  margin: 50px 0 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.b-price__hoverList {
+  list-style-type: none;
+  padding-left: 0;
+  text-align: center;
+}
+
+.b-price__hoverItems {
+  font-size: 14px;
+  color: #81868e;
+  line-height: 2.143;
+}
+
+.b-price__hoverButton {
+  height: 60px;
+  background-color: #1fbba6;
+}
+
+.b-price__hoverLink {
+  font-size: 16px;
+  color: white;
+  line-height: 0.75;
+  height: 100%;
+  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.b-price__hoverLink:hover {
+  text-decoration: none;
+  color: white;
+  opacity: 0.5;
+}
+
+.b-animationBox {
+  padding: 0;
+  height: 290px;
+  width: 200px;
+  position: relative;
+  -webkit-perspective: 500px;
+          perspective: 500px;
+}
+
+.b-animationBox:not(:last-child) {
+  margin-right: 60px;
+}
+
+.b-animationBox__front {
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transition-duration: .5s;
+          transition-duration: .5s;
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.b-animationBox:hover .b-animationBox__front {
+  -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+  visibility: hidden;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+
+.b-animationBox__back {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 25px 0 0;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+  visibility: hidden;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  -webkit-transition-duration: .5s;
+          transition-duration: .5s;
+}
+
+.b-animationBox:hover .b-animationBox__back {
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+  visibility: visible;
 }
 
 .container {
@@ -1154,5 +1392,13 @@ header {
 .footerSectionTeam {
   margin-top: 0;
   background-image: url(../images/team-footer-bg.png);
+}
+
+.carousel-control-next-icon {
+  background-image: url(../images/chevron-right-solid.svg);
+}
+
+.carousel-control-prev-icon {
+  background-image: url(../images/chevron-left-solid.svg);
 }
 /*# sourceMappingURL=style.css.map */
