--- a/style/bem-box/_animationPrice.scss
+++ b/style/bem-box/_animationPrice.scss
@@ -1,13 +1,29 @@
 .b-animationBox {
     padding: 0;
-    height: 290px;
+    min-height: 290px;
     width: 200px;
     position: relative;
     perspective: 500px;
 
     &:not(:last-child) {
         margin-right: 60px;
+
+        @include media-breakpoint-down(sm) {
+            margin-right: 0;
+            margin-bottom: 20px;
+        }
     }
+
+    @include media-breakpoint-down(sm) {
+        max-width: 300px;
+        width: 100%;
+    }
+
+
+
+
+
+
 
     &__front {
         background-color: #fff;
