--- a/style/bem-box/_price.scss
+++ b/style/bem-box/_price.scss
@@ -1,7 +1,7 @@
 .b-price {
     background-color: #e2dfdf;
     min-height: 600px;
-    padding: 50px 0;
+    padding: 50px;
 
     &__blockTitle {
         font-size: 20px;
@@ -39,6 +39,11 @@
     &__blockWrap {
         margin: 50px 0 0;
         justify-content: center;
+
+        @include media-breakpoint-down(sm) {
+            flex-direction: column;
+            align-items: center;
+        }
 
 
     }
