--- a/style/style.css
+++ b/style/style.css
@@ -1084,7 +1084,7 @@ Due to the split circle of progress-left and progress right, we must use the ani
 .b-price {
   background-color: #e2dfdf;
   min-height: 600px;
-  padding: 50px 0;
+  padding: 50px;
 }
 
 .b-price__blockTitle {
@@ -1130,6 +1130,18 @@ Due to the split circle of progress-left and progress right, we must use the ani
           justify-content: center;
 }
 
+@media (max-width: 767.98px) {
+  .b-price__blockWrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .b-price__hoverList {
   list-style-type: none;
   padding-left: 0;
@@ -1172,7 +1184,7 @@ Due to the split circle of progress-left and progress right, we must use the ani
 
 .b-animationBox {
   padding: 0;
-  height: 290px;
+  min-height: 290px;
   width: 200px;
   position: relative;
   -webkit-perspective: 500px;
@@ -1181,6 +1193,20 @@ Due to the split circle of progress-left and progress right, we must use the ani
 
 .b-animationBox:not(:last-child) {
   margin-right: 60px;
+}
+
+@media (max-width: 767.98px) {
+  .b-animationBox:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .b-animationBox {
+    max-width: 300px;
+    width: 100%;
+  }
 }
 
 .b-animationBox__front {
