finished subscribe section

--- a/style/style.scss
+++ b/style/style.scss
@@ -51,6 +51,7 @@
 @import "bem-box/testimonials";
 @import "bem-box/price";
 @import "bem-box/animationPrice";
+@import "bem-box/subscribe";
 
 .container {
     max-width: 1360px;
