--- a/style/style.css
+++ b/style/style.css
@@ -1269,6 +1269,65 @@ Due to the split circle of progress-left and progress right, we must use the ani
   visibility: visible;
 }
 
+.b-subscribe {
+  min-height: 370px;
+  background-image: url(../../images/subscribe-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.b-subscribe__title {
+  color: #fff;
+}
+
+.b-subscribe__subTitle {
+  color: #71767d;
+}
+
+.b-subscribe__form {
+  margin: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.b-subscribe__email {
+  background-color: transparent;
+  font-size: 14px;
+  color: #cfd3d4;
+  height: 40px;
+}
+
+.b-subscribe__submitBtn {
+  height: 40px;
+  background-color: #19bd9a;
+  border-color: #19bd9a;
+  font-size: 14px;
+  color: white;
+}
+
+.b-subscribe__submitBtn:hover {
+  background-color: #19bd9a;
+  border-color: #19bd9a;
+  opacity: 0.7;
+}
+
+@media (max-width: 767.98px) {
+  .b-subscribe__submitBtn {
+    max-width: 150px;
+  }
+}
+
 .container {
   max-width: 1360px;
   padding: 0;
