--- a/style/style.scss
+++ b/style/style.scss
@@ -52,6 +52,8 @@
 @import "bem-box/price";
 @import "bem-box/animationPrice";
 @import "bem-box/subscribe";
+@import "bem-box/contact";
+@import "bem-box/submit";
 
 .container {
     max-width: 1360px;
