--- a/style/bem-box/_subscribe.scss
+++ b/style/bem-box/_subscribe.scss
@@ -34,6 +34,7 @@
         border-color: #19bd9a;
         font-size: 14px;
         color: rgb(255, 255, 255);
+        text-transform: uppercase;
 
         &:hover {
             background-color: #19bd9a;
