finished map section

--- a/style/style.scss
+++ b/style/style.scss
@@ -54,6 +54,7 @@
 @import "bem-box/subscribe";
 @import "bem-box/contact";
 @import "bem-box/submit";
+@import "bem-box/map";
 
 .container {
     max-width: 1360px;
