--- a/style/bem-box/_submit.scss
+++ b/style/bem-box/_submit.scss
@@ -11,7 +11,7 @@
         padding: 0;
         margin: 0;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             &:not(:last-child) {
                 margin-bottom: 30px;
             }
