--- a/style/style.css
+++ b/style/style.css
@@ -1456,7 +1456,7 @@ Due to the split circle of progress-left and progress right, we must use the ani
   margin: 0;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
   .b-submit__formGroup:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -1498,6 +1498,50 @@ Due to the split circle of progress-left and progress right, we must use the ani
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 50px;
+}
+
+.b-map {
+  height: 500px;
+}
+
+.b-map:hover .b-map__textUpBox {
+  display: none;
+}
+
+.b-map__google {
+  width: 100%;
+  height: 100%;
+}
+
+.b-map__wrap {
+  height: inherit;
+  position: relative;
+}
+
+.b-map__textUpBox {
+  width: 100%;
+  height: 100%;
+  opacity: 0.9;
+  background-color: #252525;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.b-map__textUp {
+  font-size: 20px;
+  color: white;
+  text-transform: uppercase;
+  margin: 0 15px 0 0;
 }
 
 .container {
