--- a/style/style.scss
+++ b/style/style.scss
@@ -55,6 +55,7 @@
 @import "bem-box/contact";
 @import "bem-box/submit";
 @import "bem-box/map";
+@import "bem-box/footer";
 
 .container {
     max-width: 1360px;
