finished project with validator and test in safari

--- a/style/bem-box/_aboutUs.scss
+++ b/style/bem-box/_aboutUs.scss
@@ -20,6 +20,10 @@
             display: block;
             margin: 0 auto;
         }
+
+        @media (max-width: 300px) {
+            width: 100%;
+        }
     }
 
 
