--- a/style/style.scss
+++ b/style/style.scss
@@ -43,7 +43,7 @@
 @import "bem-box/details";
 @import "bem-box/sectionTitle";
 @import "bem-box/iconsMenu";
-@import "bem-box/progressBarServices";
+@import "progressBarServices";
 @import "bem-box/services";
 @import "bem-box/impressed";
 @import "bem-box/portfolio";
