--- a/style/_progressBarServices.scss
+++ b/style/_progressBarServices.scss
@@ -1,5 +1,5 @@
 //styling
-$borderWidth: 5px;
+$borderWidth: 7px;
 $animationTime: 1.5s;
 $border-color-default: #48494a;
 $border-color-fill: #21be9d;
@@ -105,7 +105,7 @@ $howManySteps: 10; //this needs to be even.
     align-self: center;
 
     & .row {
-        justify-content: center;
+        justify-content: space-evenly;
         margin: 0;
     }
 }
