--- a/style/bem-box/_iconsMenu.scss
+++ b/style/bem-box/_iconsMenu.scss
@@ -1,6 +1,12 @@
 .b-iconsMenu {
+    display: flex;
     justify-content: center;
     margin: 20px 0 20px;
+
+    @media (max-width: 300px) {
+        flex-direction: column;
+        align-items: center;
+    }
 
     &__item {
         width: 50px;
@@ -11,6 +17,12 @@
 
         &:not(:last-child) {
             margin-right: 27px;
+        }
+
+        @media (max-width: 300px) {
+            &:not(:last-child) {
+                margin: 0 0 15px 0;
+            }
         }
     }
 
@@ -28,7 +40,13 @@
 
         @include media-breakpoint-down(sm) {
             display: flex;
-            flex-direction: row;
+            justify-content: center;
+        }
+
+        @media (max-width: 300px) {
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 15px;
         }
     }
 
