--- a/style/bem-box/_portfolio.scss
+++ b/style/bem-box/_portfolio.scss
@@ -6,6 +6,10 @@
         padding: 50px;
     }
 
+    @media (max-width: 300px) {
+        padding: 20px 10px;
+    }
+
     &__nav {
         text-align: center;
         margin: 50px 0;
@@ -30,6 +34,12 @@
     &__dropdownMenu {
         text-align: right;
         margin: 50px 5px;
+
+        @media (max-width: 300px) {
+            text-align: center;
+            margin: 20px 0;
+            width: 100%;
+        }
     }
 
     &__imgBox {
