change img portfolio

--- a/style/bem-box/_portfolio.scss
+++ b/style/bem-box/_portfolio.scss
@@ -81,7 +81,7 @@
     }
 
     &__img1-1 {
-        background-image: url(../../images/portfolio1-1.png);
+        background-image: url(../images/portfolio1-1.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
